package ar.edu.utn.frba.dds.servicioAgregador.model.entities.origenes;

public enum Origen {
  DATASET,
  PORCONTRIBUYENTE,
  CARGAMANUAL,
  PROXY;

  public boolean permiteSolicitud() {
    return true;
  }
}
